global parameters should have a UUID when imported from ILCD
we store them in an extension field